Fix API issues: revert environment variable handling to fix desktop and mobile access

--- a/gary2.0/package.json
+++ b/gary2.0/package.json
@@ -5,8 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "prebuild": "node scripts/inject-env.js",
-    "build": "npm run prebuild && vite build",
+    "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
