--- a/gary2.0/vercel.json
+++ b/gary2.0/vercel.json
@@ -2,10 +2,5 @@
   "rewrites": [
     { "source": "/(.*)", "destination": "/index.html" }
   ],
-  "buildCommand": "vite build",
-  "env": {
-    "VITE_ODDS_API_KEY": "@odds_api_key",
-    "VITE_DEEPSEEK_API_KEY": "@deepseek_api_key",
-    "VITE_DEEPSEEK_BASE_URL": "https://api.deepseek.com/v1"
-  }
+  "buildCommand": "vite build"
 }
