--- a/gary2.0/package.json
+++ b/gary2.0/package.json
@@ -16,6 +16,7 @@
     "@supabase/supabase-js": "^2.49.4",
     "axios": "^1.8.4",
     "date-fns": "^4.1.0",
+    "esm": "^3.2.25",
     "framer-motion": "^12.6.5",
     "gsap": "^3.12.7",
     "react": "^18.2.0",
