--- a/gary2.0/package.json
+++ b/gary2.0/package.json
@@ -24,6 +24,7 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.5.0",
     "react-spring": "^9.7.5",
+    "react-swipeable": "^7.0.2",
     "recharts": "^2.15.2",
     "three": "^0.175.0"
   },
