--- a/gary2.0/package.json
+++ b/gary2.0/package.json
@@ -31,6 +31,7 @@
   "devDependencies": {
     "@eslint/js": "^9.21.0",
     "@tailwindcss/forms": "^0.5.7",
+    "@tailwindcss/nesting": "^0.0.0-insiders.565cd3e",
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
     "@vitejs/plugin-react": "^4.3.4",
