--- a/gary2.0/package.json
+++ b/gary2.0/package.json
@@ -16,9 +16,12 @@
     "@supabase/supabase-js": "^2.49.4",
     "axios": "^1.8.4",
     "date-fns": "^4.1.0",
+    "dayjs": "^1.11.13",
+    "dotenv": "^16.5.0",
     "esm": "^3.2.25",
     "framer-motion": "^12.6.5",
     "gsap": "^3.12.7",
+    "node-cron": "^3.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
