--- a/gary2.0/package.json
+++ b/gary2.0/package.json
@@ -14,6 +14,8 @@
     "@react-three/drei": "^9.88.7",
     "@react-three/fiber": "^9.1.2",
     "@supabase/supabase-js": "^2.49.4",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@tailwindcss/typography": "^0.5.16",
     "axios": "^1.8.4",
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
@@ -33,7 +35,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
-    "@tailwindcss/forms": "^0.5.7",
+    "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/nesting": "^0.0.0-insiders.565cd3e",
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
