--- a/gary2.0/package.json
+++ b/gary2.0/package.json
@@ -13,6 +13,7 @@
     "@react-spring/three": "^9.7.5",
     "@react-three/drei": "^9.88.7",
     "@react-three/fiber": "^9.1.2",
+    "@shadcn/ui": "^0.0.4",
     "@supabase/supabase-js": "^2.49.4",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/typography": "^0.5.16",
@@ -21,8 +22,9 @@
     "dayjs": "^1.11.13",
     "dotenv": "^16.5.0",
     "esm": "^3.2.25",
-    "framer-motion": "^12.6.5",
+    "framer-motion": "^12.7.4",
     "gsap": "^3.12.7",
+    "lucide-react": "^0.503.0",
     "node-cron": "^3.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -30,7 +32,7 @@
     "react-router-dom": "^7.5.0",
     "react-spring": "^9.7.5",
     "react-swipeable": "^7.0.2",
-    "recharts": "^2.15.2",
+    "recharts": "^2.15.3",
     "three": "^0.175.0"
   },
   "devDependencies": {
@@ -40,13 +42,13 @@
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
     "@vitejs/plugin-react": "^4.3.4",
-    "autoprefixer": "^10.4.17",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9.21.0",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
-    "postcss": "^8.4.35",
-    "tailwindcss": "^3.4.1",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^3.4.17",
     "vite": "^6.2.0"
   }
 }
