--- a/gary2.0/package.json
+++ b/gary2.0/package.json
@@ -26,6 +26,7 @@
     "gsap": "^3.12.7",
     "lucide-react": "^0.503.0",
     "node-cron": "^3.0.3",
+    "openai": "^4.96.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
