--- a/gary2.0/package.json
+++ b/gary2.0/package.json
@@ -7,21 +7,26 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "api": "node api/stripe-api.js"
   },
   "dependencies": {
     "@react-spring/three": "^9.7.5",
     "@react-three/drei": "^9.88.7",
     "@react-three/fiber": "^9.1.2",
     "@shadcn/ui": "^0.0.4",
+    "@stripe/react-stripe-js": "^3.7.0",
+    "@stripe/stripe-js": "^7.3.0",
     "@supabase/supabase-js": "^2.49.4",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/typography": "^0.5.16",
     "axios": "^1.8.4",
+    "cors": "^2.8.5",
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
     "dotenv": "^16.5.0",
     "esm": "^3.2.25",
+    "express": "^5.1.0",
     "framer-motion": "^12.7.4",
     "gsap": "^3.12.7",
     "lucide-react": "^0.503.0",
@@ -34,6 +39,7 @@
     "react-spring": "^9.7.5",
     "react-swipeable": "^7.0.2",
     "recharts": "^2.15.3",
+    "stripe": "^18.1.0",
     "three": "^0.175.0"
   },
   "devDependencies": {
