--- a/gary2.0/package.json
+++ b/gary2.0/package.json
@@ -21,6 +21,7 @@
     "@supabase/supabase-js": "^2.49.4",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/typography": "^0.5.16",
+    "@vercel/analytics": "^1.5.0",
     "axios": "^1.8.4",
     "cors": "^2.8.5",
     "date-fns": "^4.1.0",
@@ -28,7 +29,7 @@
     "dotenv": "^16.5.0",
     "esm": "^3.2.25",
     "express": "^5.1.0",
-    "framer-motion": "^12.7.4",
+    "framer-motion": "^12.9.5",
     "gsap": "^3.12.7",
     "lucide-react": "^0.503.0",
     "node-cron": "^3.0.3",
