Update Vercel configuration to include API routes in deployment

--- a/gary2.0/vercel.json
+++ b/gary2.0/vercel.json
@@ -2,5 +2,15 @@
   "rewrites": [
     { "source": "/((?!api/).*)" , "destination": "/index.html" }
   ],
-  "buildCommand": "vite build"
+  "buildCommand": "vite build",
+  "functions": {
+    "api/**/*.js": {
+      "memory": 1024,
+      "maxDuration": 10
+    }
+  },
+  "builds": [
+    { "src": "package.json", "use": "@vercel/static-build" },
+    { "src": "pages/api/**/*.js", "use": "@vercel/node" }
+  ]
 }
