--- a/gary2.0/vercel.json
+++ b/gary2.0/vercel.json
@@ -1,16 +1,13 @@
 {
   "rewrites": [
-    { "source": "/((?!api/).*)" , "destination": "/index.html" }
+    { "source": "/api/:path*", "destination": "/api/:path*" },
+    { "source": "/(.*)", "destination": "/index.html" }
   ],
-  "buildCommand": "vite build",
   "functions": {
     "api/**/*.js": {
       "memory": 1024,
       "maxDuration": 10
     }
   },
-  "builds": [
-    { "src": "package.json", "use": "@vercel/static-build" },
-    { "src": "pages/api/**/*.js", "use": "@vercel/node" }
-  ]
+  "buildCommand": "vite build"
 }
