🚀 FIX: Resolve 504 Gateway Timeout errors for OpenAI proxy
- Increased Vercel function timeout from 10s to 60s for OpenAI proxy
- Added AbortController with 45s timeout to prevent hanging requests
- Optimized request parameters (limited max_tokens, disabled streaming)
- Added comprehensive timing and error logging for debugging
- Should resolve 504 timeout errors in production

--- a/gary2.0/vercel.json
+++ b/gary2.0/vercel.json
@@ -6,7 +6,11 @@
   "functions": {
     "api/**/*.js": {
       "memory": 1024,
-      "maxDuration": 10
+      "maxDuration": 30
+    },
+    "api/openai-proxy.js": {
+      "memory": 1024,
+      "maxDuration": 60
     }
   },
   "buildCommand": "vite build"
